# hw7-regression

./: README.md  hw7-test.ipynb  pyproject.toml  requirements.txt
.github/: test.yml
regression/: logreg.py
test/: test_logreg.py
