[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"



[project]
name = "regression"
authors = [{name = "Tracy Lou", email = "tracy.lou@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest"]


[project.urls]
Home = "https://github.com/tlouskt/hw7-regression"